--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "bootstrap": "4.5.0",
     "chart.js": "2.9.3",
     "history": "4.10.1",
-    "node-sass": "4.14.1",
+    "node-sass": "^4.14.1",
     "perfect-scrollbar": "1.5.0",
     "react": "16.13.1",
     "react-chartjs-2": "2.9.0",
     "react-dom": "16.13.1",
     "react-google-maps": "9.4.5",
     "react-notification-alert": "0.0.12",
+    "react-reactive-form": "^1.0.32",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
