--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "history": "4.10.1",
     "node-sass": "^4.14.1",
     "perfect-scrollbar": "1.5.0",
+    "query-string": "^6.13.1",
     "react": "16.13.1",
     "react-bootstrap": "1.3.0",
     "react-chartjs-2": "2.9.0",
